@@ -1,5 +1,7 @@
 DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
 DIST kadu-0.6.5-rc1.tar.bz2 2298356 RMD160 5058c743c55745faf55170efd22af72cf65a62c2 SHA1 a768e816a612c28e36a8c2eaa8a253962eb41178 SHA256 6ba6da04793bb8c0166c00fa6698d7013cfe7e5952a5162b2ce94f74246d4f2a
+DIST kadu-0.6.5-rc2.tar.bz2 1316088 RMD160 c25c229edb88c4aa62d2ddd2b0ee98296f70a378 SHA1 977fe5ead95f45751431de1718a0f6f05ee63a4c SHA256 dc0292ee94919e161b7e2e27f9d00b9cf27d5faf53c5fbda35db3cda81de5ff6
 EBUILD kadu-advanced_userlist-0.6.0.2.ebuild 226 RMD160 2fb9ce96f5f9a54c4f7218c834cbe9e10be78453 SHA1 92166e5700d96bbcf2153bdf0932747dd613eb6d SHA256 0cb7c75a185267b5fa52360bb7a253853536085c2bdb9c39f03b18380677641d
 EBUILD kadu-advanced_userlist-0.6.5_rc1.ebuild 170 RMD160 c4f1313b007eb3abbcf6718a95eb56cfe6b5f283 SHA1 7666d9730809930942080af5f548f2385370f265 SHA256 9a90fbe07c45a6d1de71c83da820a99f704f6aeffd7ea8a2b99b0a2303f2aef6
-MISC ChangeLog 550 RMD160 2771773e84571c845f5676e92d6d82bf14fad1d6 SHA1 a2080908a7bd0bae486c75b7d689fab9c538c7da SHA256 1b9ebd3da61458eff23b01f6a5414df6d7697a6d7326078abc5e210a2ae9c942
+EBUILD kadu-advanced_userlist-0.6.5_rc2.ebuild 170 RMD160 c4f1313b007eb3abbcf6718a95eb56cfe6b5f283 SHA1 7666d9730809930942080af5f548f2385370f265 SHA256 9a90fbe07c45a6d1de71c83da820a99f704f6aeffd7ea8a2b99b0a2303f2aef6
+MISC ChangeLog 654 RMD160 c58ce08cb065ea054566ac1af54cb0809913e2e6 SHA1 84d9e5d08dd382148179cdc7a196b700127110a6 SHA256 4d49509b88bac68aa4d3d60c4926b26f1f06505a7553a7de06ec1372f9c404c5
