@@ -1,0 +1,11 @@
+#
+# PACKAGE INFORMATION
+#
+
+inherit kadu-base kadu-mod
+
+DESCRIPTION="Advanced userlist sorting module for Kadu"
+HOMEPAGE="http://kadu.net"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
