@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-advanced_userlist-0.6.5_rc2.ebuild:
+  Bumped.
+
   07 Aug 2008; Michał Ziąbkowski <mziab@o2.pl>
   -kadu-advanced_userlist-0.6.0.1.ebuild:
   Removed cruft.
